--- a/style.css
+++ b/style.css
@@ -58,8 +58,33 @@ button#btn-add-task:active{
     opacity: 0.6;
 }
 
+ul#list-task{
+    width: 100%;
+    list-style-type: none;
+    margin-top: 30px;
+}
+
+li.task{
+    background-color: #f2f2f2;
+    box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.247) ;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 15px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
 
 
 img{
     height: 25px;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+li.task:hover img{
+    opacity: 1;
 }
